login form css added

--- a/components/Login.html
+++ b/components/Login.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sidd5449/css-lib/style.css">
     <title>Login Form</title>
 </head>
 <body>
-    
+    <div class="login__form">
+        <div class="login__head">
+            <h6>Login</h6>
+            <p>Login here if you have an account</p>
+        </div>
+        <div class="login__form__inputs">
+            <input type="email" placeholder="Enter email address..." class="email__input">
+            <input type="password" placeholder="Enter password.." class="pass__input">
+        </div>
+        <button class="primary__button">Login</button>
+        <p>Not a member? <a href="/">Signup</a></span></p>
+        
+    </div>
 </body>
 </html>
