--- a/style.css
+++ b/style.css
@@ -119,6 +119,26 @@ button:hover{
     display: flex;
     flex-direction: column;
     border-radius: 1.2vw;
+    width: fit-content;
+    padding: 4vh 3vw;
+    align-items: center;
+
+}
+.login__form p{
+    margin-top: 2vh;
+}
+.login__head{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.login__form__inputs{
+    display: flex;
+    flex-direction: column;
+    margin-top: 2vh;
+}
+.login__form__inputs input{
+    width: 22vw;
 }
 
 
